<resources>
    <string name="app_name">Zzleep</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="bedroom">Bedroom</string>
    <string name="default_email">default_email</string>
    <string name="default_name">default_name</string>
    <string name="device">Device</string>
    <string name="last_day">Last Day</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="dash">-</string>
    <string name="average_co2">Average CO2:</string>
    <string name="average_sound">Average sound:</string>
    <string name="average_humidity">Average humidity:</string>
    <string name="average_temperature">Average temperature:</string>
    <string name="currently_available_devices">Currently available devices</string>
    <string name="device_id">Device id:</string>
    <string name="new_room_s_name">New room\'s name:</string>
    <string name="create_device">Create device</string>
    <string name="setup_welcome">Welcome! Please enter your device id, and the name of the room, where you have placed your device!</string>
    <string name="report">Report</string>
    <string name="last_sleep">Last sleep</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="co2">CO2</string>
    <string name="sound">Sound</string>
    <string name="_0">0</string>
    <string name="minimum">Minimum:</string>
    <string name="maximum">Maximum:</string>
    <string name="expected">Expected:</string>
    <string name="page_to_modify_at_each_tab">Page to modify at each tab</string>
    <string name="url">Url:</string>
    <string name="source">Source:</string>
    <string name="tips_and_facts">Tips AND Facts</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>

    //Spinner in prefrences
    <string-array name="Rooms">
        <item>All</item>
        <item>Bedroom</item>
        <item>Livingroom</item>
    </string-array>

</resources>
