<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/SkyBlue">

    <TextView
        android:id="@+id/urlt"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/url"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourcet" />

    <TextView
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlDialog" />

    <TextView
        android:id="@+id/sourcet"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/source"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentDialog" />

    <TextView
        android:id="@+id/sourceDialog"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toEndOf="@+id/sourcet"
        app:layout_constraintTop_toBottomOf="@+id/contentDialog"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/urlDialog"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toEndOf="@+id/urlt"
        app:layout_constraintTop_toBottomOf="@+id/sourceDialog"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/titleDialog"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contentDialog"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDialog" />

</androidx.constraintlayout.widget.ConstraintLayout>