<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/deviceSpinner"
                android:layout_width="181dp"
                android:layout_height="match_parent">

            </Spinner>

            <Spinner
                android:id="@+id/sleepSpinner"
                android:layout_width="230dp"
                android:layout_height="match_parent">

            </Spinner>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="257dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="#E3E3E3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/averageCo2Num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="56dp"
                    android:text="@string/dash"
                    android:textSize="23sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.983"
                    app:layout_constraintStart_toEndOf="@+id/averageCo2"
                    app:layout_constraintTop_toBottomOf="@+id/averageSoundNum" />

                <TextView
                    android:id="@+id/averageSoundNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="56dp"
                    android:text="@string/dash"
                    android:textSize="23sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.966"
                    app:layout_constraintStart_toEndOf="@+id/averageSound"
                    app:layout_constraintTop_toBottomOf="@+id/averageHumidityNum" />

                <TextView
                    android:id="@+id/averageHumidityNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="56dp"
                    android:text="@string/dash"
                    android:textSize="23sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.949"
                    app:layout_constraintStart_toEndOf="@+id/averageHumidity"
                    app:layout_constraintTop_toBottomOf="@+id/averageTemperatureNum" />

                <TextView
                    android:id="@+id/averageCo2"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/average_co2"
                    android:textSize="23sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/averageSound" />

                <TextView
                    android:id="@+id/averageSound"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/average_sound"
                    android:textSize="23sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/averageHumidity" />

                <TextView
                    android:id="@+id/averageHumidity"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/average_humidity"
                    android:textSize="23sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/averageTemperature" />

                <TextView
                    android:id="@+id/averageTemperature"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/average_temperature"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/averageTemperatureNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="56dp"
                    android:text="@string/dash"
                    android:textSize="23sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.966"
                    app:layout_constraintStart_toEndOf="@+id/averageTemperature"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <Spinner
            android:id="@+id/spinnerSleepData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="418dp">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>


    </LinearLayout>


</ScrollView>
