<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_preferences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/preferencesSpinner"
                android:layout_width="189dp"
                android:layout_height="34dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/regulationsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Regulations"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="8dp">


            <ImageView
                android:id="@+id/temperatureImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/temperature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/temperature"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/temperatureImage"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/minTempEditText"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/TempMinTextView"
                app:layout_constraintTop_toBottomOf="@+id/tempText" />

            <EditText
                android:id="@+id/MaxTempEditText"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/TempMaxTextView"
                app:layout_constraintTop_toBottomOf="@+id/tempText" />

            <TextView
                android:id="@+id/TempMinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/minimum"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/temperatureImage"
                app:layout_constraintTop_toBottomOf="@+id/tempText"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/TempMaxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:paddingEnd="2dp"
                android:text="@string/maximum"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/minTempEditText"
                app:layout_constraintTop_toBottomOf="@+id/tempText"
                tools:ignore="RtlSymmetry,SmallSp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="8dp">


            <ImageView
                android:id="@+id/humImage"
                android:layout_width="44dp"
                android:layout_height="51dp"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/humidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/humText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/humImage"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/minHumEditText"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/HumMinTextView"
                app:layout_constraintTop_toBottomOf="@+id/humText" />

            <EditText
                android:id="@+id/MaxHumEditText"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/HemMaxTextView"
                app:layout_constraintTop_toBottomOf="@+id/humText" />

            <TextView
                android:id="@+id/HumMinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/minimum"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/humImage"
                app:layout_constraintTop_toBottomOf="@+id/humText"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/HemMaxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:paddingEnd="2dp"
                android:text="@string/maximum"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/minHumEditText"
                app:layout_constraintTop_toBottomOf="@+id/humText"
                tools:ignore="RtlSymmetry,SmallSp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="392dp"
            android:layout_height="86dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp">


            <ImageView
                android:id="@+id/co2Image"
                android:layout_width="53dp"
                android:layout_height="67dp"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/co2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/co2Text"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:text="@string/co2"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/co2Image"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/minCo2EditText"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/_0"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/Co2MinTextView"
                app:layout_constraintTop_toBottomOf="@+id/co2Text" />

            <EditText
                android:id="@+id/MaxCo2EditText"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/Co2MaxTextView"
                app:layout_constraintTop_toBottomOf="@+id/co2Text" />

            <TextView
                android:id="@+id/Co2MinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:text="@string/minimum"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/co2Image"
                app:layout_constraintTop_toBottomOf="@+id/co2Text"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/Co2MaxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:paddingEnd="2dp"
                android:text="@string/maximum"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/minCo2EditText"
                app:layout_constraintTop_toBottomOf="@+id/co2Text"
                tools:ignore="RtlSymmetry,SmallSp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/save"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.appcompat.widget.LinearLayoutCompat>

